Fix overflow issues with file tree and code editor.

--- a/resources/css/_variables.scss
+++ b/resources/css/_variables.scss
@@ -1,1 +1,1 @@
-$some-color: #2F2F1F;
+$panel-drawer-height: 36px;
