--- a/resources/css/utilities/editor-syntax.scss
+++ b/resources/css/utilities/editor-syntax.scss
@@ -1,6 +1,16 @@
+@use '../variables.scss' as variables;
+
 .codeflask {
     background-color: rgb(36, 40, 59);
     color: rgb(192, 202, 245);
+    height: calc(100% - #{variables.$panel-drawer-height}) !important;
+    width: -moz-available !important;
+    width: -webkit-fill-available !important;
+    width: stretch !important;
+
+    pre {
+        width: auto !important;
+    }
 }
 
 .codeflask .token.punctuation {
@@ -52,13 +62,14 @@
 }
 
 .codeflask__lines {
+    z-index: 5 !important;
     background-color: rgb(36, 40, 59);
+    height: auto !important;
 
     & > .codeflask__lines__line {
         color: rgb(95, 105, 148);
     }
 }
-
 
 .codeflask.codeflask--has-line-numbers::before {
     background-color: rgb(36, 40, 59) !important;
